@@ -6,6 +6,7 @@
 ===============
 ~ updated the DTD
 - the ant build script now also creates the dist folder if it does not exist (thanks to tahura)
+* when @AssertValid is used on a map the map's keys and values are now validated too by default (thanks to tahura)
 
 2006-12-10 v0.8
 ===============
@@ -23,7 +24,7 @@
 + net.sf.oval.configuration.POJOConfigurer and all configuration elements are now serializable
 + added support for ParaNamer http://paranamer.codehaus.org/ for method parameter name resolving
 + added a DTD for the XML configuration file
-* when @AssertValid is used on collections the collection's elements are now validated too by default (thanks to tahura)
+* when @AssertValid is used on a collection the collection's elements are now validated too by default (thanks to tahura)
 
 Refactoring:
 * net.sf.oval.annotations.Guarded: annotation @Constrained renamed to @Guarded
